add_stratified_sampling_3

--- a/stratified_sampling.ipynb
+++ b/stratified_sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "1cc6dcf6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "02b51a22",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "a118a2d7",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "c44d88e0",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "28961"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "07acaf2a",
    "metadata": {},
    "outputs": [],
@@ -74,13 +74,7 @@
     "df['Bin_Size of ontology ABox'] = pd.cut(df['Size of ontology ABox'], bins=bin_edges, labels=False)\n",
     "\n",
     "bin_edges = np.histogram_bin_edges(df['Avg Min Explanation Size'], bins='auto')\n",
-    "df['Bin_Avg Min Explanation Size'] = pd.cut(df['Avg Min Explanation Size'], bins=bin_edges, labels=False)\n",
-    "\n",
-    "bin_edges = np.histogram_bin_edges(df['Avg Max Explanation Size'], bins='auto')\n",
-    "df['Bin_Avg Max Explanation Size'] = pd.cut(df['Avg Max Explanation Size'], bins=bin_edges, labels=False)\n",
-    "\n",
-    "bin_edges = np.histogram_bin_edges(df['Avg Explanation Count'], bins='auto')\n",
-    "df['Bin_Avg Explanation Count'] = pd.cut(df['Avg Explanation Count'], bins=bin_edges, labels=False)"
+    "df['Bin_Avg Min Explanation Size'] = pd.cut(df['Avg Min Explanation Size'], bins=bin_edges, labels=False)"
    ]
   },
   {
@@ -93,13 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "a12723ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['strata'] = df['Bin_Size of ontology ABox'].astype(str) + '_' + df['Bin_Avg Min Explanation Size'].astype(str) \\\n",
-    "               + '_' + df['Bin_Avg Max Explanation Size'].astype(str) + '_' + df['Bin_Avg Explanation Count'].astype(str)"
+    "df['strata'] = df['Bin_Size of ontology ABox'].astype(str) + '_' + df['Bin_Avg Min Explanation Size'].astype(str) "
    ]
   },
   {
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "bf89909e",
    "metadata": {},
    "outputs": [],
@@ -123,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "3a4140dc",
    "metadata": {},
    "outputs": [],
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "f1ff97c6",
    "metadata": {},
    "outputs": [],
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "5aa3e6bf",
    "metadata": {},
    "outputs": [],
@@ -164,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "88df6182",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1436"
+       "1473"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "05be8dc0",
    "metadata": {},
    "outputs": [],
